force-app/main/default/objects/Sperm_Storage_Imports__c/Sperm_Storage_Imports__c.object-meta.xml
<CustomObject>
    <label>Sperm Storage Import</label>
    <nameField>
        <label>Sperm Storage Import</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sperm Storage Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>