force-app/main/default/objects/Sperm_Storage_Imports__c/fields/Couldnt_Import__c.field-meta.xml
<CustomField>
    <fullName>Couldnt_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Couldnt Import</label>
    <type>Checkbox</type>
</CustomField>