force-app/main/default/objects/Sperm_Storage_Imports__c/fields/Date_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Date_Frozen__c</fullName>
    <label>Date Frozen</label>
    <type>Date</type>
</CustomField>