force-app/main/default/objects/Sperm_Storage_Imports__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>D.O.B</label>
    <type>Date</type>
</CustomField>