force-app/main/default/objects/Sperm_Storage_Imports__c/fields/No_Remain__c.field-meta.xml
<CustomField>
    <fullName>No_Remain__c</fullName>
    <label>No. Remain</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>