force-app/main/default/objects/Sperm_Storage_Imports__c/fields/Patient_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Number__c</fullName>
    <label>Patient Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>