force-app/main/default/objects/Sperm_Storage_Imports__c/fields/Sperm_Source__c.field-meta.xml
<CustomField>
    <fullName>Sperm_Source__c</fullName>
    <label>Sperm Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>