force-app/main/default/objects/Sperm_Storage_Imports__c/fields/Storage_ID__c.field-meta.xml
<CustomField>
    <fullName>Storage_ID__c</fullName>
    <label>Storage ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>