force-app/main/default/objects/Sperm_Storage_Imports__c/fields/Storage_Site__c.field-meta.xml
<CustomField>
    <fullName>Storage_Site__c</fullName>
    <label>Storage Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>